# worldcrab

./: .gitignore  Cargo.toml  README.md  example.atom.xml  example.rss.xml
.github/workflows/: test.yml
src/: main.rs
